# test-automation-project

./: .gitignore  README.md  conftest.py  pyproject.toml  test_demo.py
.github/workflows/: test-automation.yml
