[project]
name = 'demo-project'
version = '0.1.0'
description = 'Demo'
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = 'Codeff', email = 'info@codeff.com'},
]

classifiers=[
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]


dependencies = [
    "testuff", 
    "pytest-playwright",
    "pytest-dotenv"
]


[tool.uv.sources]
testuff = { git = "https://github.com/TestuffAPI/python-testuff.git" }